--- a/form/nav-style.css
+++ b/form/nav-style.css
@@ -66,7 +66,6 @@ body {
 
 footer {
   position: absolute;
-  position: fixed;
   bottom: 0;
   width: 100%;
   text-align: center;
@@ -74,6 +73,8 @@ footer {
 
 .footer-container > p {
   text-align: center;
+  font-size: 0.8em;
+  color: #d89b9b;
 }
 
 @media screen and (max-width: 500px) {
