--- a/homepage/style.css
+++ b/homepage/style.css
@@ -51,6 +51,7 @@ section {
   cursor: auto;
 }
 svg {
+  display: none;
   width: 100%;
   margin-top: 10%;
   align-self: center;
@@ -94,7 +95,7 @@ h2 {
   font-family: var(--font-family);
   color: var(--font-color);
   text-align: center;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -109,7 +110,7 @@ input[type="submit"] {
   margin-top: 0.6rem;
   padding: 3px;
   border-radius: 150px;
-  font-size: 1rem;
+  font-size: 1.5rem;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
   cursor: pointer;
   transition: 0.3s ease;
